--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <a href="#" class="item-menu"> CARDAPIO</a> -
             <a href="#" class="item-menu"> FOTOS</a> -
             <a href="#" class="item-menu"> CONTATO</a> 
+
         </nav>
+        <div class="banner">
+            <img src="imagens/imagem-banner.png" alt="bolo de chocolate"> 
+            class= "imagem-banner"> 
+        </div>
     </main> 
     <script src="app.js"></script>
     
